# question-generator

./: .gitignore  README.md  docker-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
spaced-repetition/: package-lock.json  package.json
spaced-repetition/app/: app.css  root.tsx
spaced-repetition/app/components/: question-generator.tsx
spaced-repetition/app/routes/: home.tsx
src/: main.py  state.py
src/chroma/: __init__.py  client.py  embeddingconversion.py  notion.py
src/models/: agent.py  information_retrieval.py
