[project]
name = "question-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-ollama>=0.3.3",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.5.0",
    "notion-client>=2.4.0",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
]
